compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__inference_into_field.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/inference_into_field.test
input_file: compiler/hachi-tests/tests/ui/type/inference_into_field.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::type_mismatch

  × type mismatch
    ╭─[tests/ui/type/inference_into_field.test:9:10]
  8 │   let o = new Buf {
  9 │     buf: &mkbuf(123),
    ·          ─────┬─────┬
    ·               │     ╰── the expression has type *i32
    ·               ╰── expected type i32
 10 │   };
    ╰────
