compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__let_assignment_type_mismatch.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/let_assignment_type_mismatch.test
input_file: compiler/hachi-tests/tests/ui/type/let_assignment_type_mismatch.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::type_mismatch

  × type mismatch
   ╭─[tests/ui/type/let_assignment_type_mismatch.test:2:16]
 1 │ fn test(v: bool) {
 2 │   let k: i32 = v;
   ·                ┬┬
   ·                │╰── expected type i32
   ·                ╰── the expression has type bool
 3 │ }
   ╰────
