compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__type_construct_field_type_mismatch.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/type_construct_field_type_mismatch.test
input_file: compiler/hachi-tests/tests/ui/type/type_construct_field_type_mismatch.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::type_mismatch

  × type mismatch
    ╭─[tests/ui/type/type_construct_field_type_mismatch.test:9:8]
  8 │     x: 123,
  9 │     y: true,
    ·        ──┬─┬
    ·          │ ╰── expected type i32
    ·          ╰── the expression has type bool
 10 │   };
    ╰────
